--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.3.1",
   "description": "自动备份用户B站收藏夹中的视频信息，当视频失效时，使用备份的标题替换「已失效视频」",
   "permissions": [
-    "webRequest","storage", "unlimitedStorage"
+    "webRequest","storage", "unlimitedStorage", "alarms"
   ],
   "host_permissions": [
     "https://*.bilibili.com/*"
